--- a/PF/marpple.html
+++ b/PF/marpple.html
@@ -11,60 +11,221 @@
   <body>
     <div id="wrap">
       <header id="header">
-        <div class="logo">marpple</div>
+        <div class="logo"><a href="#">MARPPLE</a></div>
         <nav class="menu">
-          <div class="menu1">
-            <ul>
-              <li><a href="#">회원가입</a></li>
-              <li><a href="#">로그인</a></li>
-              <li><a href="#">포토리뷰</a></li>
-              <li><a href="#">오늘의 요리</a></li>
-              <li><a href="#">단체주문</a></li>
-              <li><a href="#">고객센터</a></li>
-            </ul>
-          </div>
-          <div class="menu2">
-            <ul>
-              <li><a href="#">음료</a></li>
-              <li><a href="#">샐러드</a></li>
-              <li><a href="#">스테이크</a></li>
-              <li><a href="#">파스타</a></li>
-              <li><a href="#">피자</a></li>
-              <li><a href="#">햄버거</a></li>
-              <li><a href="#">스프</a></li>
-              <li><a href="#">디저트</a></li>
-              <li><a href="#">런치박스/밀키트</a></li>
-            </ul>
-          </div>
-          <div class="icon_3">
-            <ul>
-              <li>
-                <a href="#"><img src="img/person.png" alt="person" /></a>
-              </li>
-              <li>
-                <a href="#"><img src="img/heart.png" alt="heart" /></a>
-              </li>
-              <li>
-                <a href="#"><img src="img/cart.png" alt="cart" /></a>
-              </li>
-            </ul>
-          </div>
+          <ul class="menu1">
+            <li><a href="#">회원가입</a></li>
+            <li><a href="#">로그인</a></li>
+            <li><a href="#">포토리뷰</a></li>
+            <li><a href="#">오늘의 요리</a></li>
+            <li><a href="#">단체주문</a></li>
+            <li><a href="#">고객센터</a></li>
+          </ul>
+
+          <ul class="menu2">
+            <li><a href="#">음료</a></li>
+            <li><a href="#">샐러드</a></li>
+            <li><a href="#">스테이크</a></li>
+            <li><a href="#">파스타</a></li>
+            <li><a href="#">피자</a></li>
+            <li><a href="#">햄버거</a></li>
+            <li><a href="#">스프</a></li>
+            <li><a href="#">디저트</a></li>
+            <li><a href="#">런치박스/밀키트</a></li>
+          </ul>
+
+          <ul class="icon_3">
+            <li>
+              <a href="#"><img src="img/person.png" alt="person" /></a>
+            </li>
+            <li>
+              <a href="#"><img src="img/heart.png" alt="heart" /></a>
+            </li>
+            <li>
+              <a href="#"><img src="img/cart.png" alt="cart" /></a>
+            </li>
+          </ul>
         </nav>
       </header>
 
       <section id="section">
         <div class="content1">
-          <div class="slide"></div>
-          <div class="icon_btn"></div>
-          <div class="banner"></div>
+          <div class="slide">
+            <img src="img/main_banner2.jpg" alt="메뉴보기" />
+          </div>
+          <div class="icon_btn">
+            <div class="icon_btn_top">
+              <img src="img/drk.png" alt="음료" />
+              <img src="img/sld.png" alt="샐러드" />
+              <img src="img/stk.png" alt="스테이크" />
+              <img src="img/pst.png" alt="파스타" />
+              <img src="img/pz.png" alt="피자" />
+              <img src="img/bg.png" alt="햄버거" />
+              <img src="img/sp.png" alt="스프" />
+              <img src="img/ds.png" alt="디저트" />
+              <img src="img/lb.png" alt="런치박스" />
+              <img src="img/kit.png" alt="밀키트" />
+            </div>
+            <div>
+              <ul class="icon_btn_bottom">
+                <li><a href="#">음료</a></li>
+                <li><a href="#">샐러드</a></li>
+                <li><a href="#">스테이크</a></li>
+                <li><a href="#">파스타</a></li>
+                <li><a href="#">피자</a></li>
+                <li><a href="#">햄버거</a></li>
+                <li><a href="#">스프</a></li>
+                <li><a href="#">디저트</a></li>
+                <li><a href="#">런치박스</a></li>
+                <li><a href="#">밀키트</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="banner">
+            <img src="img/s_banner.jpg" alt="단체주문" />
+          </div>
         </div>
         <div class="content2">
-          <div class="mealkit"></div>
-          <div class="todayfood"></div>
-          <div class="review"></div>
-          <div class="howto"></div>
-          <div class="place"></div>
-        </div>
+          <div class="mealkit">
+            <h2>MEAL KIT</h2>
+            <span>내가 만드는 나만의 요리</span>
+
+            <div class="kitimg">
+              <img src="img/kit_m.jpg" alt="오징어먹물파스타" />
+              <img src="img/kit_e.jpg" alt="새우필라프" />
+              <img src="img/kit_a.jpg" alt="오리지널피자" />
+              <img src="img/kit_l.jpg" alt="해산물빠에야" />
+            </div>
+          </div>
+          <div class="todayfood">
+            <h2>오늘의 요리</h2>
+            <div class="food1">
+              <img src="img/food1.jpg" alt="스테이크" />
+              <p class="food_txt">스테이크</p>
+              <p>꽃등심/채끝등심</p>
+            </div>
+            <div class="food2">
+              <img src="img/food2.jpg" alt="해물파스타" />
+              <p class="food_txt">해산물 파스타</p>
+              <p>랍스터/새우</p>
+            </div>
+            <div class="food3">
+              <img src="img/food3.jpg" alt="비건샌드위치" />
+              <p class="food_txt">비건 샌드위치</p>
+              <p>유기농 채소</p>
+            </div>
+            <div class="food4">
+              <img src="img/food4.jpg" alt="갈릭스테이크" />
+              <p class="food_txt">갈릭 스테이크</p>
+              <p>꽃등심/채끝등심</p>
+            </div>
+          </div>
+          <div class="review">
+            <h2>BEST 리뷰</h2>
+            <div class="review1">
+              <img src="img/review1.jpg" alt="리뷰" />
+              <p class="review_txt">★★★★★</p>
+              <p>
+                매장분위기도 좋고 예약서비스도 만족합니다.매장분위기도 좋고
+                예약서비스도 만족합니다.매장분위기도 좋고 예약서비스도
+                만족합니다.
+              </p>
+              <p>2022. 10. 21</p>
+            </div>
+            <div class="review2">
+              <img src="img/review2.jpg" alt="리뷰" />
+              <p class="review_txt">★★★★★</p>
+              <p>
+                매장분위기도 좋고 예약서비스도 만족합니다.매장분위기도 좋고
+                예약서비스도 만족합니다.매장분위기도 좋고 예약서비스도
+                만족합니다.
+              </p>
+              <p>2022. 10. 21</p>
+            </div>
+            <div class="review3">
+              <img src="img/review3.jpg" alt="리뷰" />
+              <p class="review_txt">★★★★★</p>
+              <p>
+                매장분위기도 좋고 예약서비스도 만족합니다.매장분위기도 좋고
+                예약서비스도 만족합니다.매장분위기도 좋고 예약서비스도
+                만족합니다.
+              </p>
+              <p>2022. 10. 21</p>
+            </div>
+            <div class="review4">
+              <img src="img/review4.jpg" alt="리뷰" />
+              <p class="review_txt">★★★★★</p>
+              <p>
+                매장분위기도 좋고 예약서비스도 만족합니다.매장분위기도 좋고
+                예약서비스도 만족합니다.매장분위기도 좋고 예약서비스도
+                만족합니다.
+              </p>
+              <p>2022. 10. 21</p>
+            </div>
+          </div>
+          <div class="howto">
+            <h2>HOW TO MARPPLE</h2>
+            <p>한눈에 보는 맛~집 사용법</p>
+            <div class="ad1">
+              <img src="img/reserve.jpg" alt="예약" />
+              <img src="img/20coupon.jpg" alt="쿠폰" />
+            </div>
+            <div class="ad2">
+              <img src="img/3box1.jpg" alt="스테이크맛있게즐기는법" />
+              <img src="img/3box2.jpg" alt="단체주문배달" />
+              <img src="img/3box3.jpg" alt="홈파티엔밀키트" />
+            </div>
+          </div>
+          <div class="place">
+            <h2>MARPPLE’S PLACE</h2>
+            <p>하이 퀄리티 브랜드 마플을 즐길 수 있는 곳</p>
+            <div class="place1">
+              <img src="img/place1.jpg" alt="" />
+              <p>서울</p>
+            </div>
+            <div class="place2">
+              <img src="img/place2.jpg" alt="" />
+                <p>서울</p>
+            </div>
+            <div class="place3">
+              <img src="img/place3.jpg" alt="" />
+                <p>서울</p>
+            </div>
+            <div class="place4">
+                <img src="img/place4.jpg" alt="" />
+                  <p>서울</p>
+            </div>
+
+            <div class="place5">
+                <img src="img/place5.jpg" alt="" />
+                  <p>서울</p>
+            </div>
+
+            <div class="place6">
+                <img src="img/place6.jpg" alt="" />
+                  <p>서울</p>
+            </div>
+
+            <div class="place7">
+                <img src="img/place7.jpg" alt="" />
+                  <p>서울</p>
+            </div>
+
+            <div class="place8">
+                <img src="img/place8.jpg" alt="" />
+                  <p>서울</p>
+            </div>
+
+            <div class="place9">
+                <img src="img/place9.jpg" alt="" />
+              <p>서울</p>
+            </div>
+            <div class="place10">
+                <img src="img/place10.jpg" alt="" />
+                  <p>서울</p>
+            </div>
+          </div>
+
       </section>
 
       <footer id="footer"></footer>
