--- a/PF/marpple.html
+++ b/PF/marpple.html
@@ -55,16 +55,16 @@
           </div>
           <div class="icon_btn">
             <div class="icon_btn_top">
-              <img src="img/drk.png" alt="음료" />
-              <img src="img/sld.png" alt="샐러드" />
-              <img src="img/stk.png" alt="스테이크" />
-              <img src="img/pst.png" alt="파스타" />
-              <img src="img/pz.png" alt="피자" />
-              <img src="img/bg.png" alt="햄버거" />
-              <img src="img/sp.png" alt="스프" />
-              <img src="img/ds.png" alt="디저트" />
-              <img src="img/lb.png" alt="런치박스" />
-              <img src="img/kit.png" alt="밀키트" />
+              <a href="#"><img src="img/drk.png" alt="음료" /></a>
+              <a href="#"><img src="img/sld.png" alt="샐러드" /></a>
+              <a href="#"><img src="img/stk.png" alt="스테이크" /></a>
+              <a href="#"><img src="img/pst.png" alt="파스타" /></a>
+              <a href="#"><img src="img/pz.png" alt="피자" /></a>
+              <a href="#"><img src="img/bg.png" alt="햄버거" /></a>
+              <a href="#"><img src="img/sp.png" alt="스프" /></a>
+              <a href="#"><img src="img/ds.png" alt="디저트" /></a>
+              <a href="#"><img src="img/lb.png" alt="런치박스" /></a>
+              <a href="#"><img src="img/kit.png" alt="밀키트" /></a>
             </div>
             <div>
               <ul class="icon_btn_bottom">
@@ -96,6 +96,13 @@
               <img src="img/kit_a.jpg" alt="오리지널피자" />
               <img src="img/kit_l.jpg" alt="해산물빠에야" />
             </div>
+            <div class="kit_txt">
+              <p class="kit_t1">오징어 먹물 파스타</p>
+              <p class="kit_t2">새우 필라프</p>
+              <p class="kit_t3">오리지널 피자</p>
+              <p class="kit_t4"> 해산물 빠에야</p>
+            </div>
+
           </div>
           <div class="todayfood">
             <h2>오늘의 요리</h2>
@@ -125,42 +132,46 @@
             <div class="review1">
               <img src="img/review1.jpg" alt="리뷰" />
               <p class="review_txt">★★★★★</p>
-              <p>
+                <p class="review_desc">
                 매장분위기도 좋고 예약서비스도 만족합니다.매장분위기도 좋고
                 예약서비스도 만족합니다.매장분위기도 좋고 예약서비스도
+                만족합니다.매장분위기도 좋고 예약서비스도
                 만족합니다.
               </p>
-              <p>2022. 10. 21</p>
+               <p class="date">2022. 10. 21</p>
             </div>
             <div class="review2">
               <img src="img/review2.jpg" alt="리뷰" />
               <p class="review_txt">★★★★★</p>
-              <p>
+                <p class="review_desc">
                 매장분위기도 좋고 예약서비스도 만족합니다.매장분위기도 좋고
                 예약서비스도 만족합니다.매장분위기도 좋고 예약서비스도
+                만족합니다.매장분위기도 좋고 예약서비스도
                 만족합니다.
               </p>
-              <p>2022. 10. 21</p>
+              <p class="date">2022. 10. 21</p>
             </div>
             <div class="review3">
               <img src="img/review3.jpg" alt="리뷰" />
               <p class="review_txt">★★★★★</p>
-              <p>
+               <p class="review_desc">
                 매장분위기도 좋고 예약서비스도 만족합니다.매장분위기도 좋고
                 예약서비스도 만족합니다.매장분위기도 좋고 예약서비스도
+                만족합니다.매장분위기도 좋고 예약서비스도
                 만족합니다.
               </p>
-              <p>2022. 10. 21</p>
+               <p class="date">2022. 10. 21</p>
             </div>
             <div class="review4">
               <img src="img/review4.jpg" alt="리뷰" />
               <p class="review_txt">★★★★★</p>
-              <p>
+              <p class="review_desc">
                 매장분위기도 좋고 예약서비스도 만족합니다.매장분위기도 좋고
                 예약서비스도 만족합니다.매장분위기도 좋고 예약서비스도
+                만족합니다.매장분위기도 좋고 예약서비스도
                 만족합니다.
               </p>
-              <p>2022. 10. 21</p>
+                <p class="date">2022. 10. 21</p>
             </div>
           </div>
           <div class="howto">
@@ -175,6 +186,11 @@
               <img src="img/3box2.jpg" alt="단체주문배달" />
               <img src="img/3box3.jpg" alt="홈파티엔밀키트" />
             </div>
+            <div class="ad2_txt">
+              <p class="ad2_t1">스테이크 맛있게 즐기는 법</p>
+              <p class="ad2_t2">단체 주문 배달 <br><span>무료 배달 서비스 실시</span></p>
+              <p class="ad2_t3">홈파티엔 밀키트 <br><span>무료 택배 서비스 실시</span></p>
+            </div>
           </div>
           <div class="place">
             <h2>MARPPLE’S PLACE</h2>
@@ -185,44 +201,44 @@
             </div>
             <div class="place2">
               <img src="img/place2.jpg" alt="" />
-                <p>서울</p>
+                <p>인천</p>
             </div>
             <div class="place3">
               <img src="img/place3.jpg" alt="" />
-                <p>서울</p>
+                <p>대전</p>
             </div>
             <div class="place4">
                 <img src="img/place4.jpg" alt="" />
-                  <p>서울</p>
+                  <p>광주</p>
             </div>
 
             <div class="place5">
                 <img src="img/place5.jpg" alt="" />
-                  <p>서울</p>
+                  <p>부산</p>
             </div>
 
             <div class="place6">
                 <img src="img/place6.jpg" alt="" />
-                  <p>서울</p>
+                  <p>울산</p>
             </div>
 
             <div class="place7">
                 <img src="img/place7.jpg" alt="" />
-                  <p>서울</p>
+                  <p>대구</p>
             </div>
 
             <div class="place8">
                 <img src="img/place8.jpg" alt="" />
-                  <p>서울</p>
+                  <p>경기</p>
             </div>
 
             <div class="place9">
                 <img src="img/place9.jpg" alt="" />
-              <p>서울</p>
+              <p>충북</p>
             </div>
             <div class="place10">
                 <img src="img/place10.jpg" alt="" />
-                  <p>서울</p>
+                  <p>경남</p>
             </div>
           </div>
 
