--- a/PF/index.html
+++ b/PF/index.html
@@ -9,10 +9,10 @@
     </head>
     <body>
         <header id="header">
-            <div class="container">
+            <div class="container" class="clearfix">
                 <div class="logo"><a href="#">MARPPLE</a></div>
                 <nav class="menu">
-                    <ul class="menu1">
+                    <ul class="menu1" class="clearfix">
                         <li><a href="#">회원가입</a></li>
                         <li><a href="#">로그인</a></li>
                         <li><a href="#">포토리뷰</a></li>
@@ -21,7 +21,7 @@
                         <li><a href="#">고객센터</a></li>
                     </ul>
 
-                    <ul class="menu2">
+                    <ul class="menu2" class="clearfix">
                         <li><a href="#">음료</a></li>
                         <li><a href="#">샐러드</a></li>
                         <li><a href="#">스테이크</a></li>
@@ -33,7 +33,7 @@
                         <li><a href="#">런치박스/밀키트</a></li>
                     </ul>
 
-                    <ul class="icon_3">
+                    <ul class="icon_3" class="clearfix">
                         <li>
                             <a href="#"
                                 ><img src="img/person.png" alt="person"
@@ -64,7 +64,7 @@
 
             <section id="section2">
                 <div class="container">
-                    <div class="icon_btn">
+                    <div class="icon_btn" class="clearfix">
                         <div class="icon_btn_top">
                             <a href="#"><img src="img/drk.png" alt="음료" /></a>
                             <a href="#"
@@ -92,7 +92,7 @@
                             /></a>
                         </div>
                         <div>
-                            <ul class="icon_btn_bottom">
+                            <ul class="icon_btn_bottom" class="clearfix">
                                 <li><a href="#">음료</a></li>
                                 <li><a href="#">샐러드</a></li>
                                 <li><a href="#">스테이크</a></li>
@@ -114,7 +114,7 @@
             <!-- //section2 -->
             <section id="section3">
                 <div class="container">
-                    <div class="mealkit">
+                    <div class="mealkit" class="clearfix">
                         <h2>MEAL KIT</h2>
                         <span>내가 만드는 나만의 요리</span>
 
@@ -136,7 +136,7 @@
             <!-- //section3 -->
             <section id="section4">
                 <div class="container">
-                    <div class="todayfood">
+                    <div class="todayfood" class="clearfix">
                         <h2>오늘의 요리</h2>
                         <div class="food1">
                             <img src="img/food1.jpg" alt="스테이크" />
@@ -164,7 +164,7 @@
             <!-- section4 -->
             <section id="section5">
                 <div class="container">
-                    <div class="review">
+                    <div class="review" class="clearfix">
                         <h2>BEST 리뷰</h2>
                         <div class="review1">
                             <img src="img/review1.jpg" alt="리뷰" />
@@ -235,7 +235,7 @@
                             <img src="img/3box2.jpg" alt="단체주문배달" />
                             <img src="img/3box3.jpg" alt="홈파티엔밀키트" />
                         </div>
-                        <div class="ad2_txt">
+                        <div class="ad2_txt" class="clearfix">
                             <p class="ad2_t1">스테이크 맛있게 즐기는 법</p>
                             <p class="ad2_t2">
                                 단체 주문 배달 <br /><span
@@ -254,59 +254,129 @@
             <!-- section6 -->
             <section id="section7">
                 <div class="container">
-                    <div class="place">
+                    <div class="place" class="clearfix">
                         <h2>MARPPLE’S PLACE</h2>
                         <p>하이 퀄리티 브랜드 마플을 즐길 수 있는 곳</p>
-                        <div class="place1">
-                            <img src="img/place1.jpg" alt="" />
+                        <div class="place1" class="clearfix">
+                            <a href="#"><img src="img/place1.jpg" alt="" /></a>
                             <p>서울</p>
                         </div>
                         <div class="place2">
-                            <img src="img/place2.jpg" alt="" />
+                            <a href="#"><img src="img/place2.jpg" alt="" /></a>
                             <p>인천</p>
                         </div>
                         <div class="place3">
-                            <img src="img/place3.jpg" alt="" />
+                            <a href="#"><img src="img/place3.jpg" alt="" /></a>
                             <p>대전</p>
                         </div>
                         <div class="place4">
-                            <img src="img/place4.jpg" alt="" />
+                            <a href="#"><img src="img/place4.jpg" alt="" /></a>
                             <p>광주</p>
                         </div>
 
                         <div class="place5">
-                            <img src="img/place5.jpg" alt="" />
+                            <a href="#"><img src="img/place5.jpg" alt="" /></a>
                             <p>부산</p>
                         </div>
 
                         <div class="place6">
-                            <img src="img/place6.jpg" alt="" />
+                            <a href="#"><img src="img/place6.jpg" alt="" /></a>
                             <p>울산</p>
                         </div>
 
                         <div class="place7">
-                            <img src="img/place7.jpg" alt="" />
+                            <a href="#"><img src="img/place7.jpg" alt="" /></a>
                             <p>대구</p>
                         </div>
 
                         <div class="place8">
-                            <img src="img/place8.jpg" alt="" />
+                            <a href="#"><img src="img/place8.jpg" alt="" /></a>
                             <p>경기</p>
                         </div>
 
                         <div class="place9">
-                            <img src="img/place9.jpg" alt="" />
+                            <a href="#"><img src="img/place9.jpg" alt="" /></a>
                             <p>충북</p>
                         </div>
                         <div class="place10">
-                            <img src="img/place10.jpg" alt="" />
+                            <a href="#"><img src="img/place10.jpg" alt="" /></a>
                             <p>경남</p>
                         </div>
                     </div>
                 </div>
             </section>
             <!-- section7 -->
-            <footer id="footer"></footer>
+            <footer id="footer">
+                <div class="container">
+                    <div class="footer_top" class="clearfix">
+                        <div class="box1">
+                            <p>MARPPLE</p>
+                            <img src="" alt="" />
+                            <p>한국어</p>
+                        </div>
+                        <div class="box2">
+                            <ul>
+                                <li>MARPPLE</li>
+                                <li>마플소개</li>
+                                <li>요리</li>
+                                <li>리뷰</li>
+                                <li>이벤트</li>
+                                <li>마플프레이스</li>
+                            </ul>
+                        </div>
+                        <div class="box3">
+                            <ul>
+                                <li>HELP</li>
+                                <li>주문/결제문의</li>
+                                <li>예약/단체문의</li>
+                                <li>쿠폰</li>
+                            </ul>
+                        </div>
+                        <div class="box4">
+                            <p>FOLLOW</p>
+                            <img src="" alt="" />
+                            <img src="" alt="" />
+                            <img src="" alt="" />
+                            <img src="" alt="" />
+                            <img src="" alt="" />
+                        </div>
+                        <div class="box5">
+                            <ul>
+                                <li>CONTACT US</li>
+                                <li>1566-9437</li>
+                                <li>상담가능시간: 평일 10:00~19:00</li>
+                                <li>help@marpple.com</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="footer_bottom">
+                        <div>
+                            <ul>
+                                <li>
+                                    회사소개 PDF | 개인정보취급방침 | 이용약관
+                                </li>
+                                <li>
+                                    (주)마플코퍼레이션 | 대표 박혜윤 |
+                                    사업자등록번호 105-88-13322 사업자정보 |
+                                    통신판매업신고 2021-서울금천구-1710
+                                </li>
+                                <li>
+                                    서울 금첝구 가산디지털1로 75-24
+                                    아이레스비즈타워 10층 | 고객센터 1566-9437 |
+                                    팩스 02-6486-9437
+                                </li>
+                                <li>
+                                    마플 콘텐츠의 저작권은 저작권자 또는
+                                    제공자에 있으며, 이를 무단 사용 및 도용하는
+                                    경우 저작권법 등에 따라 법적 책임을 질 수
+                                    있음을 알려드립니다.
+                                </li>
+                                <li>© 2022 marpple Corp All right reverved</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </footer>
         </div>
     </body>
 </html>
