--- a/PF/index.html
+++ b/PF/index.html
@@ -114,21 +114,51 @@
             <!-- //section2 -->
             <section id="section3">
                 <div class="container">
-                    <div class="mealkit" class="clearfix">
-                        <h2>MEAL KIT</h2>
-                        <span>내가 만드는 나만의 요리</span>
-
-                        <div class="kitimg">
-                            <img src="img/kit_m.jpg" alt="오징어먹물파스타" />
-                            <img src="img/kit_e.jpg" alt="새우필라프" />
-                            <img src="img/kit_a.jpg" alt="오리지널피자" />
-                            <img src="img/kit_l.jpg" alt="해산물빠에야" />
+                    <div class="mealkit">
+                        <h2>MEAL KIT<span>내가 만드는 나만의 요리</span></h2>
+                        <div class="kitimg_wrap1" class="clearfix">
+                            <div class="kit_1">
+                                <img
+                                    class="kitimg"
+                                    src="img/kit_m.jpg"
+                                    alt="오징어먹물파스타"
+                                />
+                                <p class="kit_t1" class="kit_txt">
+                                    오징어 먹물 파스타
+                                </p>
+                            </div>
+                            <div class="kit_2">
+                                <img
+                                    class="kitimg"
+                                    src="img/kit_e.jpg"
+                                    alt="새우필라프"
+                                />
+                                <p class="kit_t2" class="kit_txt">
+                                    새우 필라프
+                                </p>
+                            </div>
                         </div>
-                        <div class="kit_txt">
-                            <p class="kit_t1">오징어 먹물 파스타</p>
-                            <p class="kit_t2">새우 필라프</p>
-                            <p class="kit_t3">오리지널 피자</p>
-                            <p class="kit_t4">해산물 빠에야</p>
+                        <div class="kitimg_wrap2" class="clearfix">
+                            <div class="kit_3">
+                                <img
+                                    class="kitimg"
+                                    src="img/kit_a.jpg"
+                                    alt="오리지널피자"
+                                />
+                                <p class="kit_t3" class="kit_txt">
+                                    오리지널 피자
+                                </p>
+                            </div>
+                            <div class="kit_4">
+                                <img
+                                    class="kitimg"
+                                    src="img/kit_l.jpg"
+                                    alt="해산물빠에야"
+                                />
+                                <p class="kit_t4" class="kit_txt">
+                                    해산물 빠에야
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -227,15 +257,33 @@
                             <img src="img/reserve.jpg" alt="예약" />
                             <img src="img/20coupon.jpg" alt="쿠폰" />
                         </div>
-                        <div class="ad2">
-                            <img
-                                src="img/3box1.jpg"
-                                alt="스테이크맛있게즐기는법"
-                            />
-                            <img src="img/3box2.jpg" alt="단체주문배달" />
-                            <img src="img/3box3.jpg" alt="홈파티엔밀키트" />
+                        <div class="ad2" class="clearfix">
+                            <div class="ad2_1">
+                                <img
+                                    src="img/3box1.jpg"
+                                    alt="스테이크맛있게즐기는법"
+                                />
+                                <p class="ad2_t1">스테이크 맛있게 즐기는 법</p>
+                            </div>
+                            <div class="ad2_2">
+                                <img src="img/3box2.jpg" alt="단체주문배달" />
+                                <p class="ad2_t2">
+                                    단체 주문 배달 <br /><span
+                                        >무료 배달 서비스 실시</span
+                                    >
+                                </p>
+                            </div>
+                            <div class="ad2_3">
+                                <img src="img/3box3.jpg" alt="홈파티엔밀키트" />
+                                <p class="ad2_t3">
+                                    홈파티엔 밀키트 <br /><span
+                                        >무료 택배 서비스 실시</span
+                                    >
+                                </p>
+                            </div>
                         </div>
-                        <div class="ad2_txt" class="clearfix">
+
+                        <!-- <div class="ad2_txt" class="clearfix">
                             <p class="ad2_t1">스테이크 맛있게 즐기는 법</p>
                             <p class="ad2_t2">
                                 단체 주문 배달 <br /><span
@@ -247,7 +295,7 @@
                                     >무료 택배 서비스 실시</span
                                 >
                             </p>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </section>
