--- a/PF/index.html
+++ b/PF/index.html
@@ -2,6 +2,7 @@
 <html lang="ko">
     <head>
         <meta charset="UTF-8" />
+         <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width">
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>marpple</title>
@@ -53,6 +54,7 @@
                 </nav>
             </div>
         </header>
+        <!-- //header -->
 
         <div id="contents">
             <section id="section1" class="slide">
@@ -63,48 +65,27 @@
             <!-- //section1 -->
 
             <section id="section2">
-                <div class="container">
+                <div class="container" class="clearfix">
                     <div class="icon_btn" class="clearfix">
-                        <div class="icon_btn_top">
-                            <a href="#"><img src="img/drk.png" alt="음료" /></a>
-                            <a href="#"
-                                ><img src="img/sld.png" alt="샐러드"
-                            /></a>
-                            <a href="#"
-                                ><img src="img/stk.png" alt="스테이크"
-                            /></a>
-                            <a href="#"
-                                ><img src="img/pst.png" alt="파스타"
-                            /></a>
-                            <a href="#"><img src="img/pz.png" alt="피자" /></a>
-                            <a href="#"
-                                ><img src="img/bg.png" alt="햄버거"
-                            /></a>
-                            <a href="#"><img src="img/sp.png" alt="스프" /></a>
-                            <a href="#"
-                                ><img src="img/ds.png" alt="디저트"
-                            /></a>
-                            <a href="#"
-                                ><img src="img/lb.png" alt="런치박스"
-                            /></a>
-                            <a href="#"
-                                ><img src="img/kit.png" alt="밀키트"
-                            /></a>
-                        </div>
-                        <div>
-                            <ul class="icon_btn_bottom" class="clearfix">
-                                <li><a href="#">음료</a></li>
-                                <li><a href="#">샐러드</a></li>
-                                <li><a href="#">스테이크</a></li>
-                                <li><a href="#">파스타</a></li>
-                                <li><a href="#">피자</a></li>
-                                <li><a href="#">햄버거</a></li>
-                                <li><a href="#">스프</a></li>
-                                <li><a href="#">디저트</a></li>
-                                <li><a href="#">런치박스</a></li>
-                                <li><a href="#">밀키트</a></li>
-                            </ul>
-                        </div>
+                        <ul>
+                              <li><a href="#"><img src="img/drk.png" alt="음료" /><p>음료</p></a></li>
+                                <li><a href="#"><img src="img/sld.png" alt="샐러드"
+                            /><p>샐러드</p></a></li>
+                                <li><a href="#"><img src="img/stk.png" alt="스테이크"
+                            /><p>스테이크</p></a></li>
+                                <li><a href="#"><img src="img/pst.png" alt="파스타"
+                        /><p>파스타</p></a></li>
+                                <li><a href="#"><img src="img/pz.png" alt="피자" /><p>피자</p></a></li>
+                                <li><a href="#"><img src="img/bg.png" alt="햄버거"
+                            /><p>햄버거</p></a></li>
+                                <li><a href="#"><img src="img/sp.png" alt="스프" /><p>스프</p></a></li>
+                                <li><a href="#"><img src="img/ds.png" alt="디저트"
+                            /><p>디저트</p></a></li>
+                                <li><a href="#"><img src="img/lb.png" alt="런치박스"
+                            /><p>런치박스</p></a></li>
+                                <li><a href="#"><img src="img/kit.png" alt="밀키트"
+                            /><p>밀키트</p></a></li>
+                        </ul>
                     </div>
                     <div class="banner">
                         <img src="img/s_banner.jpg" alt="단체주문" />
@@ -350,8 +331,8 @@
                     <div class="footer_top" class="clearfix">
                         <div class="box1">
                             <p>MARPPLE</p>
-                            <img src="" alt="" />
-                            <p>한국어</p>
+                            <img src="img/국기.png" alt="국기" />
+                            <span>한국어</span>
                         </div>
                         <div class="box2">
                             <ul>
@@ -373,12 +354,39 @@
                         </div>
                         <div class="box4">
                             <p>FOLLOW</p>
-                            <img src="" alt="" />
-                            <img src="" alt="" />
-                            <img src="" alt="" />
-                            <img src="" alt="" />
-                            <img src="" alt="" />
+                            <div class="follow1">
+                                <img
+                                    class="sns1"
+                                    src="img/facebook.png"
+                                    alt="페이스북"
+                                />
+                                <img
+                                    class="sns2"
+                                    src="img/twitter.png"
+                                    alt=""
+                                />
+                            </div>
+                            <div class="follow2">
+                                <img
+                                    class="sns3"
+                                    src="img/pinterest.png"
+                                    alt=""
+                                />
+                                <img
+                                    class="sns4"
+                                    src="img/youtube.png"
+                                    alt=""
+                                />
+                            </div>
+                            <div class="follow3">
+                                <img
+                                    class="sns5"
+                                    src="img/instagram.png"
+                                    alt=""
+                                />
+                            </div>
                         </div>
+
                         <div class="box5">
                             <ul>
                                 <li>CONTACT US</li>
