--- a/PF/index.html
+++ b/PF/index.html
@@ -62,9 +62,9 @@
       <!-- //section1 -->
 
       <section id="section2">
-        <div class="container" class="clearfix">
-          <div class="icon_btn" class="clearfix">
-            <ul>
+        <div class="container">
+          <div class="icon_btn">
+            <ul class="clearfix">
               <li>
                 <a href="#"
                   ><img src="img/drk.png" alt="음료" />
@@ -135,66 +135,66 @@
       <!-- //section2 -->
       <section id="section3">
         <div class="container">
-          <div class="mealkit">
-            <h2>MEAL KIT<span>내가 만드는 나만의 요리</span></h2>
-
-            <div class="kitimg_wrap1" class="clearfix">
-              <div class="kit_1">
-                <img
-                  class="kitimg"
-                  src="img/kit_m.jpg"
-                  alt="오징어먹물파스타"
-                />
-                <img class="blur1" src="img/M.png" alt="M" />
-                <p class="kit_t1" class="kit_txt">오징어 먹물 파스타</p>
-              </div>
-              <div class="kit_2">
-                <img class="kitimg" src="img/kit_e.jpg" alt="새우필라프" />
-                <img class="blur2" src="img/E.png" alt="E" />
-                <p class="kit_t2" class="kit_txt">새우 필라프</p>
-              </div>
+            <div class="mealkit">
+                <h2>MEAL KIT<span>내가 만드는 나만의 요리</span></h2>
+                        <ul class="kitimg_wrap">
+                            <li class="kit_1">
+                                <img
+                                class="kitimg"
+                                src="img/kit_m.jpg"
+                                alt="오징어먹물파스타"
+                                />
+                                <img class="blur1" src="img/M.png" alt="M" />
+                                <p class="kit_t1" class="kit_txt">오징어 먹물 파스타</p>
+                            </li>
+                            <li class="kit_2">
+                                <img class="kitimg" src="img/kit_e.jpg" alt="새우필라프" />
+                                <img class="blur2" src="img/E.png" alt="E" />
+                                <p class="kit_t2" class="kit_txt">새우 필라프</p>
+                            </li>
+                            <li class="kit_3">
+                                <img class="kitimg" src="img/kit_a.jpg" alt="오리지널피자" />
+                                <img class="blur3" src="img/A.png" alt="A" />
+                                <p class="kit_t3" class="kit_txt">오리지널 피자</p>
+                            </li>
+                            <li class="kit_4">
+                                <img class="kitimg" src="img/kit_l.jpg" alt="해산물빠에야" />
+                                <img class="blur4" src="img/L.png" alt="L" />
+                                <p class="kit_t4" class="kit_txt">해산물 빠에야</p>
+                            </li>
+                        </ul>
             </div>
-            <div class="kitimg_wrap2" class="clearfix">
-              <div class="kit_3">
-                <img class="kitimg" src="img/kit_a.jpg" alt="오리지널피자" />
-                <img class="blur3" src="img/A.png" alt="A" />
-                <p class="kit_t3" class="kit_txt">오리지널 피자</p>
-              </div>
-              <div class="kit_4">
-                <img class="kitimg" src="img/kit_l.jpg" alt="해산물빠에야" />
-                <img class="blur4" src="img/L.png" alt="L" />
-                <p class="kit_t4" class="kit_txt">해산물 빠에야</p>
-              </div>
-            </div>
-          </div>
         </div>
       </section>
       <!-- //section3 -->
+
       <section id="section4">
         <div class="container">
-          <div class="todayfood" class="clearfix">
-            <h2>오늘의 요리</h2>
-            <div class="food1">
+             <div class="todayfood">
+              <h2>오늘의 요리</h2>
+          <ul class="clearfix">
+            <li class="food1">
               <img src="img/food1.jpg" alt="스테이크" />
               <p class="food_txt">스테이크</p>
               <p class="food_desc">꽃등심/채끝등심</p>
-            </div>
-            <div class="food2">
+            </li>
+            <li class="food2">
               <img src="img/food2.jpg" alt="해물파스타" />
               <p class="food_txt">해산물 파스타</p>
               <p class="food_desc">랍스터/새우</p>
-            </div>
-            <div class="food3">
+            </li>
+            <li class="food3">
               <img src="img/food3.jpg" alt="비건샌드위치" />
               <p class="food_txt">비건 샌드위치</p>
               <p class="food_desc">유기농 채소</p>
-            </div>
-            <div class="food4">
+            </li>
+            <li class="food4">
               <img src="img/food4.jpg" alt="갈릭스테이크" />
               <p class="food_txt">갈릭 스테이크</p>
               <p class="food_desc">꽃등심/채끝등심</p>
-            </div>
-          </div>
+            </li>
+        </ul>
+        </div>
         </div>
       </section>
       <!-- section4 -->
@@ -202,7 +202,8 @@
         <div class="container">
           <div class="review" class="clearfix">
             <h2>BEST 리뷰</h2>
-            <div class="review1">
+            <ul>
+            <li class="review1">
               <img src="img/review1.jpg" alt="리뷰" />
               <p class="review_txt">★★★★★</p>
               <p class="review_desc">
@@ -211,8 +212,8 @@
                 만족합니다.매장분위기도 좋고 예약서비스도 만족합니다.
               </p>
               <p class="date">2022. 10. 21</p>
-            </div>
-            <div class="review2">
+            </li>
+            <li class="review2">
               <img src="img/review2.jpg" alt="리뷰" />
               <p class="review_txt">★★★★★</p>
               <p class="review_desc">
@@ -221,8 +222,8 @@
                 만족합니다.매장분위기도 좋고 예약서비스도 만족합니다.
               </p>
               <p class="date">2022. 10. 21</p>
-            </div>
-            <div class="review3">
+            </li>
+            <li class="review3">
               <img src="img/review3.jpg" alt="리뷰" />
               <p class="review_txt">★★★★★</p>
               <p class="review_desc">
@@ -231,8 +232,8 @@
                 만족합니다.매장분위기도 좋고 예약서비스도 만족합니다.
               </p>
               <p class="date">2022. 10. 21</p>
-            </div>
-            <div class="review4">
+            </li>
+            <li class="review4">
               <img src="img/review4.jpg" alt="리뷰" />
               <p class="review_txt">★★★★★</p>
               <p class="review_desc">
@@ -241,7 +242,9 @@
                 만족합니다.매장분위기도 좋고 예약서비스도 만족합니다.
               </p>
               <p class="date">2022. 10. 21</p>
-            </div>
+            </li>
+            </ul>
+    
           </div>
         </div>
       </section>
@@ -282,51 +285,54 @@
           <div class="place" class="clearfix">
             <h2>MARPPLE’S PLACE</h2>
             <p>하이 퀄리티 브랜드 마플을 즐길 수 있는 곳</p>
-            <div class="place1" class="clearfix">
-              <a href="#"><img src="img/place1.jpg" alt="" /></a>
-              <p>서울</p>
-            </div>
-            <div class="place2">
-              <a href="#"><img src="img/place2.jpg" alt="" /></a>
-              <p>인천</p>
-            </div>
-            <div class="place3">
-              <a href="#"><img src="img/place3.jpg" alt="" /></a>
-              <p>대전</p>
-            </div>
-            <div class="place4">
-              <a href="#"><img src="img/place4.jpg" alt="" /></a>
-              <p>광주</p>
-            </div>
+            <ul class="place_btn"> 
+                <li class="place1" class="clearfix">
+                <a href="#"><img src="img/place1.jpg" alt="" /></a>
+                <p>서울</p>
+                </li>
+                <li class="place2">
+                <a href="#"><img src="img/place2.jpg" alt="" /></a>
+                <p>인천</p>
+                </li>
+                <li class="place3">
+                <a href="#"><img src="img/place3.jpg" alt="" /></a>
+                <p>대전</p>
+                </li>
+                <li class="place4">
+                <a href="#"><img src="img/place4.jpg" alt="" /></a>
+                <p>광주</p>
+                </li>
 
-            <div class="place5">
-              <a href="#"><img src="img/place5.jpg" alt="" /></a>
-              <p>부산</p>
-            </div>
+                <li class="place5">
+                <a href="#"><img src="img/place5.jpg" alt="" /></a>
+                <p>부산</p>
+                </li>
 
-            <div class="place6">
-              <a href="#"><img src="img/place6.jpg" alt="" /></a>
-              <p>울산</p>
-            </div>
+                <li class="place6">
+                <a href="#"><img src="img/place6.jpg" alt="" /></a>
+                <p>울산</p>
+                </li>
 
-            <div class="place7">
-              <a href="#"><img src="img/place7.jpg" alt="" /></a>
-              <p>대구</p>
-            </div>
+                <li class="place7">
+                <a href="#"><img src="img/place7.jpg" alt="" /></a>
+                <p>대구</p>
+                </li>
 
-            <div class="place8">
-              <a href="#"><img src="img/place8.jpg" alt="" /></a>
-              <p>경기</p>
-            </div>
+                <li class="place8">
+                <a href="#"><img src="img/place8.jpg" alt="" /></a>
+                <p>경기</p>
+                </li>
 
-            <div class="place9">
-              <a href="#"><img src="img/place9.jpg" alt="" /></a>
-              <p>충북</p>
-            </div>
-            <div class="place10">
-              <a href="#"><img src="img/place10.jpg" alt="" /></a>
-              <p>경남</p>
-            </div>
+                <li class="place9">
+                <a href="#"><img src="img/place9.jpg" alt="" /></a>
+                <p>충북</p>
+                </li>
+                <li class="place10">
+                <a href="#"><img src="img/place10.jpg" alt="" /></a>
+                <p>경남</p>
+                </li>
+            </ul>
+           
           </div>
         </div>
       </section>
